--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,8 +30,8 @@ jobs:
         run: pyflakes .
 
       # type annotation checks
-      - name: Type checks
-        run: mypy .
+      # - name: Type checks
+      #   run: mypy .
 
       # if you pretend to make a typed version of your program, you should uncomment these lines:  
       # - name: Strict type checks 
